network-stack.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: VPC, Subnets, Route Tables, IGW, NAT Gateway for Gitea deployment.

Parameters:
  CustomIdentifier:
    Type: String
  AWSRegion:
    Type: String

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub cmtr-${CustomIdentifier}-vpc

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Sub ${AWSRegion}a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub cmtr-${CustomIdentifier}-pub-sub1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Sub ${AWSRegion}b
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub cmtr-${CustomIdentifier}-pub-sub2

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Sub ${AWSRegion}a
      Tags:
        - Key: Name
          Value: !Sub cmtr-${CustomIdentifier}-priv-sub1

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: !Sub ${AWSRegion}b
      Tags:
        - Key: Name
          Value: !Sub cmtr-${CustomIdentifier}-priv-sub2

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub cmtr-${CustomIdentifier}-igw

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NATGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: AttachGateway
    Properties:
      AllocationId: !GetAtt ElasticIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub cmtr-${CustomIdentifier}-natgw

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub cmtr-${CustomIdentifier}-private-rt1

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub cmtr-${CustomIdentifier}-public-rt1

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

Outputs:
  VPC:
    Value: !Ref VPC
    Export:
      Name: !Sub cmtr-${CustomIdentifier}-vpc-id

  PublicSubnet1:
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub cmtr-${CustomIdentifier}-pub-sub1-id

  PublicSubnet2:
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub cmtr-${CustomIdentifier}-pub-sub2-id

  PrivateSubnet1:
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub cmtr-${CustomIdentifier}-priv-sub1-id

  PrivateSubnet2:
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub cmtr-${CustomIdentifier}-priv-sub2-id
